// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchInput /> snapshot expanded 1`] = `
<Tooltip
  component={[Function]}
  position="bottom"
>
  <Styled(div)
    default={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#DFE1E6",
        "color": "#6B778C",
        "iconColor": "#344563",
      }
    }
    focus={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#4C9AFF",
        "color": "#091E42",
        "iconColor": "#091E42",
      }
    }
    hover={
      Object {
        "backgroundColor": "rgba(222, 235, 255, 0.9)",
        "borderColor": "#DFE1E6",
        "color": "#0052CC",
        "iconColor": "#0052CC",
      }
    }
    isExpanded={true}
  >
    <Styled(span)
      isExpanded={true}
    >
      <ForwardRef
        icon={<Styled(SearchIcon) />}
        onClick={[Function]}
        tooltip={null}
      />
    </Styled(span)>
    <Styled(span)
      default={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#DFE1E6",
          "color": "#6B778C",
          "iconColor": "#344563",
        }
      }
      focus={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#4C9AFF",
          "color": "#091E42",
          "iconColor": "#091E42",
        }
      }
      hover={
        Object {
          "backgroundColor": "rgba(222, 235, 255, 0.9)",
          "borderColor": "#DFE1E6",
          "color": "#0052CC",
          "iconColor": "#0052CC",
        }
      }
      isExpanded={true}
      onClick={[Function]}
      onKeyPress={[Function]}
      tabIndex={0}
    >
      <SearchIcon />
    </Styled(span)>
    <Styled(div)
      default={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#DFE1E6",
          "color": "#6B778C",
          "iconColor": "#344563",
        }
      }
      focus={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#4C9AFF",
          "color": "#091E42",
          "iconColor": "#091E42",
        }
      }
      hover={
        Object {
          "backgroundColor": "rgba(222, 235, 255, 0.9)",
          "borderColor": "#DFE1E6",
          "color": "#0052CC",
          "iconColor": "#0052CC",
        }
      }
    >
      <ArrowLeftIcon
        label="Exit Search"
        primaryColor="#6B778C"
        size="large"
      />
    </Styled(div)>
    <Styled(input)
      data-test-id="search-dialog-input"
      default={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#DFE1E6",
          "color": "#6B778C",
          "iconColor": "#344563",
        }
      }
      focus={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#4C9AFF",
          "color": "#091E42",
          "iconColor": "#091E42",
        }
      }
      hover={
        Object {
          "backgroundColor": "rgba(222, 235, 255, 0.9)",
          "borderColor": "#DFE1E6",
          "color": "#0052CC",
          "iconColor": "#0052CC",
        }
      }
      isExpanded={true}
      maxLength={500}
      onChange={[Function]}
      onClick={[Function]}
      onInput={[Function]}
      onKeyDown={[Function]}
      value=""
    />
  </Styled(div)>
</Tooltip>
`;

exports[`<SearchInput /> snapshot explicitly collapsed 1`] = `
<Tooltip
  component={[Function]}
  position="bottom"
>
  <Styled(div)
    default={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#DFE1E6",
        "color": "#6B778C",
        "iconColor": "#344563",
      }
    }
    focus={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#4C9AFF",
        "color": "#091E42",
        "iconColor": "#091E42",
      }
    }
    hover={
      Object {
        "backgroundColor": "rgba(222, 235, 255, 0.9)",
        "borderColor": "#DFE1E6",
        "color": "#0052CC",
        "iconColor": "#0052CC",
      }
    }
    isExpanded={false}
  >
    <Styled(span)
      isExpanded={false}
    >
      <ForwardRef
        icon={<Styled(SearchIcon) />}
        onClick={[Function]}
        tooltip={null}
      />
    </Styled(span)>
    <Styled(span)
      default={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#DFE1E6",
          "color": "#6B778C",
          "iconColor": "#344563",
        }
      }
      focus={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#4C9AFF",
          "color": "#091E42",
          "iconColor": "#091E42",
        }
      }
      hover={
        Object {
          "backgroundColor": "rgba(222, 235, 255, 0.9)",
          "borderColor": "#DFE1E6",
          "color": "#0052CC",
          "iconColor": "#0052CC",
        }
      }
      isExpanded={false}
      onClick={[Function]}
      onKeyPress={[Function]}
      tabIndex={0}
    >
      <SearchIcon />
    </Styled(span)>
    <Styled(input)
      data-test-id="search-dialog-input"
      default={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#DFE1E6",
          "color": "#6B778C",
          "iconColor": "#344563",
        }
      }
      focus={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#4C9AFF",
          "color": "#091E42",
          "iconColor": "#091E42",
        }
      }
      hover={
        Object {
          "backgroundColor": "rgba(222, 235, 255, 0.9)",
          "borderColor": "#DFE1E6",
          "color": "#0052CC",
          "iconColor": "#0052CC",
        }
      }
      isExpanded={false}
      maxLength={500}
      onChange={[Function]}
      onClick={[Function]}
      onInput={[Function]}
      onKeyDown={[Function]}
      value=""
    />
  </Styled(div)>
</Tooltip>
`;

exports[`<SearchInput /> snapshot with placeholder 1`] = `
<Tooltip
  component={[Function]}
  position="bottom"
>
  <Styled(div)
    default={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#DFE1E6",
        "color": "#6B778C",
        "iconColor": "#344563",
      }
    }
    focus={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#4C9AFF",
        "color": "#091E42",
        "iconColor": "#091E42",
      }
    }
    hover={
      Object {
        "backgroundColor": "rgba(222, 235, 255, 0.9)",
        "borderColor": "#DFE1E6",
        "color": "#0052CC",
        "iconColor": "#0052CC",
      }
    }
    isExpanded={true}
  >
    <Styled(span)
      isExpanded={true}
    >
      <ForwardRef
        icon={<Styled(SearchIcon) />}
        onClick={[Function]}
        tooltip={null}
      />
    </Styled(span)>
    <Styled(span)
      default={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#DFE1E6",
          "color": "#6B778C",
          "iconColor": "#344563",
        }
      }
      focus={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#4C9AFF",
          "color": "#091E42",
          "iconColor": "#091E42",
        }
      }
      hover={
        Object {
          "backgroundColor": "rgba(222, 235, 255, 0.9)",
          "borderColor": "#DFE1E6",
          "color": "#0052CC",
          "iconColor": "#0052CC",
        }
      }
      isExpanded={true}
      onClick={[Function]}
      onKeyPress={[Function]}
      tabIndex={0}
    >
      <SearchIcon />
    </Styled(span)>
    <Styled(div)
      default={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#DFE1E6",
          "color": "#6B778C",
          "iconColor": "#344563",
        }
      }
      focus={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#4C9AFF",
          "color": "#091E42",
          "iconColor": "#091E42",
        }
      }
      hover={
        Object {
          "backgroundColor": "rgba(222, 235, 255, 0.9)",
          "borderColor": "#DFE1E6",
          "color": "#0052CC",
          "iconColor": "#0052CC",
        }
      }
    >
      <ArrowLeftIcon
        label="Exit Search"
        primaryColor="#6B778C"
        size="large"
      />
    </Styled(div)>
    <Styled(input)
      data-test-id="search-dialog-input"
      default={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#DFE1E6",
          "color": "#6B778C",
          "iconColor": "#344563",
        }
      }
      focus={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#4C9AFF",
          "color": "#091E42",
          "iconColor": "#091E42",
        }
      }
      hover={
        Object {
          "backgroundColor": "rgba(222, 235, 255, 0.9)",
          "borderColor": "#DFE1E6",
          "color": "#0052CC",
          "iconColor": "#0052CC",
        }
      }
      isExpanded={true}
      maxLength={500}
      onChange={[Function]}
      onClick={[Function]}
      onInput={[Function]}
      onKeyDown={[Function]}
      placeholder="placeholder"
      value=""
    />
  </Styled(div)>
</Tooltip>
`;

exports[`<SearchInput /> snapshot with value set 1`] = `
<Tooltip
  component={[Function]}
  position="bottom"
>
  <Styled(div)
    default={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#DFE1E6",
        "color": "#6B778C",
        "iconColor": "#344563",
      }
    }
    focus={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#4C9AFF",
        "color": "#091E42",
        "iconColor": "#091E42",
      }
    }
    hover={
      Object {
        "backgroundColor": "rgba(222, 235, 255, 0.9)",
        "borderColor": "#DFE1E6",
        "color": "#0052CC",
        "iconColor": "#0052CC",
      }
    }
    isExpanded={true}
  >
    <Styled(span)
      isExpanded={true}
    >
      <ForwardRef
        icon={<Styled(SearchIcon) />}
        onClick={[Function]}
        tooltip={null}
      />
    </Styled(span)>
    <Styled(span)
      default={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#DFE1E6",
          "color": "#6B778C",
          "iconColor": "#344563",
        }
      }
      focus={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#4C9AFF",
          "color": "#091E42",
          "iconColor": "#091E42",
        }
      }
      hover={
        Object {
          "backgroundColor": "rgba(222, 235, 255, 0.9)",
          "borderColor": "#DFE1E6",
          "color": "#0052CC",
          "iconColor": "#0052CC",
        }
      }
      isExpanded={true}
      onClick={[Function]}
      onKeyPress={[Function]}
      tabIndex={0}
    >
      <SearchIcon />
    </Styled(span)>
    <Styled(div)
      default={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#DFE1E6",
          "color": "#6B778C",
          "iconColor": "#344563",
        }
      }
      focus={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#4C9AFF",
          "color": "#091E42",
          "iconColor": "#091E42",
        }
      }
      hover={
        Object {
          "backgroundColor": "rgba(222, 235, 255, 0.9)",
          "borderColor": "#DFE1E6",
          "color": "#0052CC",
          "iconColor": "#0052CC",
        }
      }
    >
      <ArrowLeftIcon
        label="Exit Search"
        primaryColor="#6B778C"
        size="large"
      />
    </Styled(div)>
    <Styled(input)
      data-test-id="search-dialog-input"
      default={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#DFE1E6",
          "color": "#6B778C",
          "iconColor": "#344563",
        }
      }
      focus={
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#4C9AFF",
          "color": "#091E42",
          "iconColor": "#091E42",
        }
      }
      hover={
        Object {
          "backgroundColor": "rgba(222, 235, 255, 0.9)",
          "borderColor": "#DFE1E6",
          "color": "#0052CC",
          "iconColor": "#0052CC",
        }
      }
      isExpanded={true}
      maxLength={500}
      onChange={[Function]}
      onClick={[Function]}
      onInput={[Function]}
      onKeyDown={[Function]}
      value="value is here"
    />
  </Styled(div)>
</Tooltip>
`;
